'==============================================================
' CHƯƠNG 3 - 3.2.7  BIỂU ĐỒ LỚP (bản đơn giản, đúng chuẩn UML)
' Dựng từ các model thật trong package model/
'==============================================================
@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

class User {
  +uid: String
  +email: String
  +name: String
  +phone: String
  +role: String
  +isActive: Boolean
}

class Restaurant {
  +id: Long
  +name: String
  +address: String
  +phone: String
  +image: String
  +isActive: Boolean
}

class Category {
  +id: Long
  +name: String
  +isActive: Boolean
}

class Food {
  +id: Long
  +name: String
  +description: String
  +image: String
  +price: Int
  +sale: Int
  +isPopular: Boolean
}

class Order {
  +id: Long
  +customerId: String
  +shipperId: String
  +address: String
  +amount: Int
  +discountAmount: Int
  +payment: Int
  +status: Int
}

class Promotion {
  +code: String
  +title: String
  +discountPercent: Int
  +minOrderAmount: Int
  +maxDiscountAmount: Int
  +isActive: Boolean
}

class Review {
  +id: Long
  +orderId: Long
  +foodId: Long
  +userEmail: String
  +rating: Int
  +comment: String
}

class Address {
  +id: Long
  +recipientName: String
  +phone: String
  +fullAddress: String
  +isDefault: Boolean
}

Restaurant "1" -- "*" Food
Category   "1" -- "*" Food
User "1" -- "*" Order : đặt
User "0..1" -- "*" Order : giao
User "1" -- "*" Address
Order "*" -- "0..1" Promotion
Food "1" -- "*" Review
Order "1" -- "*" Review
@enduml
